# rust-warp-study

./: .env.template  Cargo.toml  Dockerfile  README.md  dither.py  docker-compose.yaml  log.out
migrations/2023-06-19-122346_users/: up.sql
migrations/2023-06-22-121715_links/: down.sql  up.sql
migrations/2023-06-22-121912_pages/: down.sql  up.sql
migrations/2023-06-22-122635_page_links/: down.sql  up.sql
migrations/2023-06-23-221350_add_unique_constraints/: down.sql  up.sql
migrations/2023-07-01-184204_session/: up.sql
migrations/2023-07-10-211709_background/: down.sql  up.sql
migrations/2023-07-12-123415_add_link_img/: down.sql  up.sql
migrations/2023-07-12-175421_add_background_to_tables/: down.sql  up.sql
migrations/2023-07-16-025348_remove_session_user_constraint/: down.sql  up.sql
src/: config.rs  db_conn.rs  lib.rs  main.rs  schema.rs  server.rs  telemetry.rs  utils.rs
src/api/: assets.rs  hello.rs  index.rs  link.rs  mod.rs  page.rs  user.rs  webauthn.rs
src/handlers/: hello.rs  hello_handler.rs  index.rs  link.rs  mod.rs  page.rs  user.rs  webauthn.rs
src/models/: background.rs  link.rs  mod.rs  page.rs  page_link.rs  session.rs  user.rs
src/routes/: assets.rs  hello.rs  hello_route.rs  index.rs  link.rs  mod.rs  page.rs  user.rs  webauthn.rs
src/services/: hello.rs  hello_service.rs  webauthn.rs
src/views/: add-to-my-page.html  body.rs  create-page.html  create-user.html  error.html  error.rs  index-authenticated.html  index.html  link-authenticated.html  link-page-authenticated.html  link-page.html  link.html  link.rs  link_page.rs  login.html  mod.rs  page-authenticated.html  page-list-item-authenticated.html  page-list-item.html  page-option-item.html  page.html  page.rs  profile.html  signup.html  user.rs
static/: background.js  index.html  mobile.css  site.webmanifest  style.css
www/static/: index.html  mobile.css  style.css
