[package]
name = "rust-warp-study"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
env_logger = "0.8.4"
log = "0.4.14"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.126"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4.13", features = ["limit", "make", "util"] }
uuid = { version = "1.3.0", features = ["v4", "fast-rng"] }
warp = "0.3"
webauthn-rs = "0.4.8"
