[package]
name = "rust-warp-study"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
chrono = {version = "0.4.26", features = ["serde"]}
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15.0"
env_logger = "0.8.4"
hyper = "0.14.26"
log = "0.4.14"
opengraph = "0.2.4"
proc-macro2 = "1.0.63"
pwhash = "1.0.0"
rand = "0.8.5"
sanitize_html = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.126"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.4.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
url = "2.4.0"
warp = "0.3"
webauthn-rs = "0.4.8"
